--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <title>Lewis Johnston | Student Web Designer</title>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link rel="icon" href="images/bulb.ico">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <nav>
